# handler.dev

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_HARDENING_PLAN.md  TUI_PLAN.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: cla.yml
agentic_development_docs/: TERMINAL_LAG_ANALYSIS.md
external_docs/anthropic/claude_code/: create_plugins.md  discover_plugins.md  hooks.md  mcp.md  skills.md  subagents.md
external_docs/daytona.io/: configuration.md  daytona.json  declarative_builder.md  getting_started.md  quickstart.md  sandboxes.md  snapshots.md  volumes.md
guest-init/: mmds-configure.sh  overlay-init
helpers/handler-tui/: Cargo.toml
helpers/handler-tui/src/: app.rs  config.rs  event.rs  main.rs  notify.rs
helpers/handler-tui/src/api/: client.rs  mod.rs  poller.rs  types.rs
helpers/handler-tui/src/pty/: grid.rs  keys.rs  mod.rs
helpers/handler-tui/src/ui/: attach.rs  dashboard.rs  help.rs  mod.rs  sidebar.rs  status_bar.rs  theme.rs  tiled.rs
helpers/handler-tui/src/ws/: mod.rs  protocol.rs  session.rs
helpers/tap-helper/: Cargo.toml
helpers/tap-helper/src/: main.rs
scripts/: base-images.json  download-fc-image.sh  download-ubuntu-minimal.sh  install-tap-helper.sh  prepare-fc-image.sh  setup.sh  status.sh  test-vm.sh  uninstall.sh  upload-fc-image.sh
scripts/dev/: .env.example  build-fc-kernel.sh  download-ubuntu-minimal.sh  fix-vm-ssh-keys.sh  global-manifest.json  prepare-fc-image.sh  setup-cloudfront.md  test-vm-restart.sh  test-vm.sh  upload-fc-image.sh
scripts/dev/migrations/: 001-update-overlay-init.sh
scripts/lib/: os-utils.sh
scripts/migrations/: 001-update-overlay-init.sh
scripts/user/: download-image.sh  install-firecracker.sh  install-tap-helper.sh
