[package]
name = "handler-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for the Handler sandbox server"
license = "MIT"

[[bin]]
name = "handler-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-util"] }
futures-util = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"

vt100 = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"

notify-rust = { version = "4.11", optional = true }

[features]
default = []
notify = ["dep:notify-rust"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
