[package]
name = "caisson-tap-helper"
version = "0.1.0"
edition = "2021"
description = "Minimal privileged helper for TAP device creation"
license = "MIT"

# Keep binary small and auditable
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols

[dependencies]
# Minimal dependencies for security-sensitive code
nix = { version = "0.27", features = ["net", "ioctl", "user", "fs"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
